Updated RedisCacheProvider with ability to parse yaml config. json is marked deprecated via warn log. TODO documentation.